--- a/templates/item/item-talentntrait-sheet.html
+++ b/templates/item/item-talentntrait-sheet.html
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} item-sheet flexcol">
- <header class="sheet-header">
+    <header class="sheet-header">
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{name}}"/>
-        
+
     </header>
     <div class="flexcol">
         <label>Name:</label>
@@ -23,14 +23,18 @@
         <label>Specialisation:</label>
         <input type="text" value="{{data.specialisation.value}}" name="data.specialisation.value">
     </div>
+    {{#if isGM}}
+    Don't change this unless you know what youre doing!
     <div class="flexcol">
         <label>Tags:</label>
         <input type="text" value="{{data.tags.value}}" name="data.tags.value">
     </div>
+
     <div class="flexcol">
         <label>Flag Id:</label>
         <input type="text" value="{{data.flagId.value}}" name="data.flagId.value">
     </div>
+    {{/if}}
     <div class="item-description">
         <label>Description:</label>
         {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
