--- a/templates/actor/actor-skills.html
+++ b/templates/actor/actor-skills.html
@@ -9,11 +9,11 @@
     </div>
 
     <div class="skills-header grid grid-7col">
-        <span class="skillItem">Skill</span>
-        <span class="skillItem">Characteristic</span>
-        <span class="skillItem">Rank</span>
-        <span class="skillItem">Temporary</span>
-        <span class="skillItem">Total</span>
+        <a class="skillItem sort-button" data-sort-type="name" data-path="name" data-item-type="skills">Skill</a>
+        <a class="skillItem sort-button" data-sort-type="name" data-path="data.characteristic.value" data-item-type="skills">Characteristic</a>
+        <a class="skillItem sort-button" data-sort-type="name" data-path="data.value" data-item-type="skills">Rank</a>
+        <a class="skillItem sort-button" data-sort-type="name" data-path="data.mod.value" data-item-type="skills">Temporary</a>
+        <a class="skillItem sort-button" data-sort-type="name" data-path=".data.total.value" data-item-type="skills">Total</a>
         <span class="skillItem">Edit</span>
         <span class="skillItem">Del.</span>
     </div>
