--- a/templates/actor/actor-exp.html
+++ b/templates/actor/actor-exp.html
@@ -98,8 +98,8 @@
     <label class="section-title">ADVANCEMENTS</label>
     <a class="item-create button" data-type="advancement" title="Add a new Advancement">Add Advancement</a>
     <div class="list list4col grid grid-4col">
-        <span class="list-item">Name</span>
-        <span class="list-item">Cost</span>
+        <a class="list-item sort-button" data-sort-type="name" data-path="name" data-item-type="advancements">Name</a>
+        <a class="list-item sort-button" data-sort-type="name" data-path="data.cost.value" data-item-type="advancements">Cost</a>
         <span class="list-button"></span>
         <span class="list-button"></span>
         {{#each actor.advancements as |a key|}}
@@ -118,9 +118,9 @@
     <span class="section-title">MISSIONS</span>
     <a class="item-create button" data-type="mission" title="Add a new Mission">Add Mission</a>
     <div class="list list5col grid grid-5col">
-        <span class="list-item">Name</span>
-        <span class="list-item">Exp</span>
-        <span class="list-item">Inf</span>
+        <a class="list-item sort-button" data-sort-type="name" data-path="name" data-item-type="missions">Name</a>
+        <a class="list-item sort-button" data-sort-type="name" data-path="data.exp.value" data-item-type="missions">Exp</a>
+        <a class="list-item sort-button" data-sort-type="name" data-path="data.inf.value" data-item-type="missions">Inf</a>
         <span class="list-button"></span>
         <span class="list-button"></span>
         {{#each actor.missions as |m key|}}
