--- a/templates/actor/actor-tnt.html
+++ b/templates/actor/actor-tnt.html
@@ -1,7 +1,7 @@
 <div class="sheet-tnt flexcol">
     <a class="tnt-create button" data-type="talentntrait" title="Add a new Talent or Trait">Add Talent or Trait</a>
     <div class="list list3col grid grid-3col">
-        <span class="list-item">Name</span>
+        <a class="list-item sort-button" data-sort-type="name" data-path="name" data-item-type="talentsntraits">Name</a>
         <span class="list-button"></span>
         <span class="list-button"></span>
         {{#each actor.talentsntraits as |t key|}}
