--- a/templates/actor/actorDH-gear.html
+++ b/templates/actor/actorDH-gear.html
@@ -9,8 +9,8 @@
         <span class="section-title">CYBERNETICS</span>
         <a class="item-create button" data-type="cybernetic" title="Add a new Cybernetic">Add Cybernetic</a>
         <div class="list list4col grid grid-4col">
-            <span class="list-item">Name</span>
-            <span class="list-item">Location</span>
+            <a class="list-item sort-button" data-sort-type="name" data-path="name" data-item-type="cybernetics">Name</a>
+            <a class="list-item sort-button" data-sort-type="name" data-path="data.location.value" data-item-type="cybernetics">Location</a>
             <span class="list-button"></span>
             <span class="list-button"></span>
             {{#each actor.cybernetics as |c key|}}
@@ -45,9 +45,9 @@
         <a class="wargear-create button" title="Add a new Wargear">Add Wargear</a>
 
         <div class="list list5col grid grid-5col">
-            <span class="list-item">Name</span>
-            <span class="list-item">Amount</span>
-            <span class="list-item">Weight</span>
+            <a class="list-item sort-button" data-sort-type="name" data-path="name" data-item-type="wargear">Name</a>
+            <a class="list-item sort-button" data-sort-type="name" data-path="data.amount.value" data-item-type="wargear">Amount</a>
+            <a class="list-item sort-button" data-sort-type="name" data-path="data.weight.total" data-item-type="wargear">Weight</a>
             <span class="list-button"></span>
             <span class="list-button"></span>
             {{#each actor.wargear as |w key|}}
