--- a/templates/actor/actor-exp.html
+++ b/templates/actor/actor-exp.html
@@ -99,7 +99,7 @@
     <a class="item-create button" data-type="advancement" title="Add a new Advancement">Add Advancement</a>
     <div class="list list4col grid grid-4col">
         <a class="list-item sort-button" data-sort-type="name" data-path="name" data-item-type="advancements">Name</a>
-        <a class="list-item sort-button" data-sort-type="name" data-path="data.cost.value" data-item-type="advancements">Cost</a>
+        <a class="list-item sort-button" data-sort-type="cost" data-path="data.cost.value" data-item-type="advancements">Cost</a>
         <span class="list-button"></span>
         <span class="list-button"></span>
         {{#each actor.advancements as |a key|}}
@@ -119,8 +119,8 @@
     <a class="item-create button" data-type="mission" title="Add a new Mission">Add Mission</a>
     <div class="list list5col grid grid-5col">
         <a class="list-item sort-button" data-sort-type="name" data-path="name" data-item-type="missions">Name</a>
-        <a class="list-item sort-button" data-sort-type="name" data-path="data.exp.value" data-item-type="missions">Exp</a>
-        <a class="list-item sort-button" data-sort-type="name" data-path="data.inf.value" data-item-type="missions">Inf</a>
+        <a class="list-item sort-button" data-sort-type="exp" data-path="data.exp.value" data-item-type="missions">Exp</a>
+        <a class="list-item sort-button" data-sort-type="inf" data-path="data.inf.value" data-item-type="missions">Inf</a>
         <span class="list-button"></span>
         <span class="list-button"></span>
         {{#each actor.missions as |m key|}}
