--- a/templates/actor/actor-skills.html
+++ b/templates/actor/actor-skills.html
@@ -10,10 +10,10 @@
 
     <div class="skills-header grid grid-7col">
         <a class="skillItem sort-button" data-sort-type="name" data-path="name" data-item-type="skills">Skill</a>
-        <a class="skillItem sort-button" data-sort-type="name" data-path="data.characteristic.value" data-item-type="skills">Characteristic</a>
-        <a class="skillItem sort-button" data-sort-type="name" data-path="data.value" data-item-type="skills">Rank</a>
-        <a class="skillItem sort-button" data-sort-type="name" data-path="data.mod.value" data-item-type="skills">Temporary</a>
-        <a class="skillItem sort-button" data-sort-type="name" data-path=".data.total.value" data-item-type="skills">Total</a>
+        <a class="skillItem sort-button" data-sort-type="char" data-path="data.characteristic.value" data-item-type="skills">Characteristic</a>
+        <a class="skillItem sort-button" data-sort-type="rank" data-path="data.value" data-item-type="skills">Rank</a>
+        <a class="skillItem sort-button" data-sort-type="mod" data-path="data.mod.value" data-item-type="skills">Temporary</a>
+        <a class="skillItem sort-button" data-sort-type="total" data-path="data.total.value" data-item-type="skills">Total</a>
         <span class="skillItem">Edit</span>
         <span class="skillItem">Del.</span>
     </div>
