implemented active effects on items
as said, also implemented special qualities for armors, still need to code the effect of the qualities but they can be added to armor. Also made npcs able to equip armor.

--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -485,7 +485,7 @@
     margin-left:3px;
     display:inherit;
 }
-.fortyk .item-delete{
+.item-delete{
     background-image: url("../icons/deleteicon.png") !important; 
     background-size: contain;
     background-repeat: no-repeat;
