--- a/templates/item/item-talentntrait-sheet.html
+++ b/templates/item/item-talentntrait-sheet.html
@@ -25,6 +25,11 @@
     </div>
     {{#if isGM}}
     Don't change this unless you know what youre doing!
+
+    <div class="flexcol">
+        <a class="modifier button">Modifiers</a>
+    </div>
+
     <div class="flexcol">
         <label>Tags:</label>
         <input type="text" value="{{data.tags.value}}" name="data.tags.value">
