--- a/templates/actor/actor-psykana.html
+++ b/templates/actor/actor-psykana.html
@@ -86,7 +86,7 @@
 
                         {{#if this}}
 
-                        {{#with (lookup ../FORTYK.itemFlags [key])~}}
+                        {{#with (lookup ../FORTYK.weaponFlags [key])~}}
                         <a class="item-descr" data-name="{{label}}" data-item-descr="{{description}}" >
 
                             {{label}}{{/with}}{{#if (isnumber this)}}({{this}}){{/if}}</a>
