--- a/templates/item/item-armor-sheet.html
+++ b/templates/item/item-armor-sheet.html
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} item-sheet flexcol">
-     <header class="sheet-header">
+    <header class="sheet-header">
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{name}}"/>
-        
+
     </header>
     <div class="flexcol">
         <label>Name:</label>
@@ -12,16 +12,16 @@
         <input type="text" value="{{data.weight.value}}" name="data.weight.value">
     </div>
     <div class="flexcol">
-            <label>Item Quality:</label>
+        <label>Item Quality:</label>
 
-            <select class="quality"  name="data.quality.value">
-                {{#select data.quality.value}}
-                {{#each FORTYK.itemQualities}}
-                <option value="{{this}}">{{this}}</option>
-                {{/each}}
-                {{/select}}
-            </select>
-        </div>
+        <select class="quality"  name="data.quality.value">
+            {{#select data.quality.value}}
+            {{#each FORTYK.itemQualities}}
+            <option value="{{this}}">{{this}}</option>
+            {{/each}}
+            {{/select}}
+        </select>
+    </div>
     <div class="flexcol">
         <label>Rarity:</label>
         <select class="power-type" name="data.rarity.value">
@@ -45,6 +45,14 @@
     <div class="flexcol">
         <label>Max Agility:</label>
         <input type="text" value="{{data.maxAgi.value}}" name="data.maxAgi.value">
+    </div>
+    {{#if isGM}}
+    <div class="flexcol">
+        <a class="modifier button">Modifiers</a>
+    </div>
+    {{/if}}
+    <div class="flexcol">
+        <a class="special button">Special Qualities</a>
     </div>
     <div class="armor-wrap flexcol">
         <div class="flexrow flex-group-center">
