--- a/templates/item/item-spaceshipWeapon-sheet.html
+++ b/templates/item/item-spaceshipWeapon-sheet.html
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} item-sheet flexcol">
- <header class="sheet-header">
+    <header class="sheet-header">
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{name}}"/>
-        
+
     </header>
     <div class="flexcol">
         <label>Name:</label>
@@ -22,12 +22,12 @@
     <div class="flexcol">
         <label>Type:</label>
         <select class="damage-type" name="data.type.value">
-                {{#select data.type.value}}
-                {{#each FORTYK.spaceshipWeaponTypes}}
-                <option value="{{this}}">{{this}}</option>
-                {{/each}}
-                {{/select}}
-            </select>
+            {{#select data.type.value}}
+            {{#each FORTYK.spaceshipWeaponTypes}}
+            <option value="{{this}}">{{this}}</option>
+            {{/each}}
+            {{/select}}
+        </select>
     </div>
     <div class="flexcol">
         <label>Damage:</label>
@@ -42,15 +42,20 @@
         <input type="text" value="{{data.strength.value}}" name="data.strength.value">
     </div>
     <div class="flexcol">
-            <label>Location:</label>
-            <select class="damage-type" name="data.location.value">
-                {{#select data.location.value}}
-                {{#each FORTYK.spaceshipWeaponLocations}}
-                <option value="{{this}}">{{this}}</option>
-                {{/each}}
-                {{/select}}
-            </select>
-        </div>
+        <label>Location:</label>
+        <select class="damage-type" name="data.location.value">
+            {{#select data.location.value}}
+            {{#each FORTYK.spaceshipWeaponLocations}}
+            <option value="{{this}}">{{this}}</option>
+            {{/each}}
+            {{/select}}
+        </select>
+    </div>
+    {{#if isGM}}
+    <div class="flexcol">
+        <a class="modifier button">Modifiers</a>
+    </div>
+    {{/if}}
     <div class="item-description">
         <label>Description:</label>
         {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
