--- a/templates/item/item-spaceshipComponent-sheet.html
+++ b/templates/item/item-spaceshipComponent-sheet.html
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} item-sheet flexcol">
- <header class="sheet-header">
+    <header class="sheet-header">
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{name}}"/>
-        
+
     </header>
     <div class="flexcol">
         <label>Name:</label>
@@ -23,7 +23,11 @@
         <label>Type:</label>
         <input type="text" value="{{data.type.value}}" name="data.type.value">
     </div>
-    
+    {{#if isGM}}
+    <div class="flexcol">
+        <a class="modifier button">Modifiers</a>
+    </div>
+    {{/if}}
     <div class="item-description">
         <label>Description:</label>
         {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
