--- a/templates/actor/actorDH-gear.html
+++ b/templates/actor/actorDH-gear.html
@@ -37,7 +37,8 @@
     <div class="cyber flexcol">
         <span class="section-title">CARRY</span>
         <div class="carry flexcol">
-            <span>Mod: <input type="text" name="data.carry.mod" value="{{data.carry.mod}}" data-dtype="Number"></span>
+            <span>Mod: <input type="text" class="combat-resources" data-target="data.carry.mod" value="{{data.carry.mod}}" data-dtype="Number"/></span>
+               
             <span>Total Weight: {{data.carry.value}}kg</span>
             <span>Max Weight: {{data.carry.max}}kg</span>
         </div>
