--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -504,7 +504,7 @@
 .fortyk .weapon-select{
     flex-basis:50%;
 }
-.fortyk .worn-item-plus{
+.fortyk .plus-button{
     background-image: url("../icons/plus.png") !important; 
     background-size: contain;
     background-repeat: no-repeat;
@@ -513,7 +513,7 @@
     margin-left:3px;
     display:inherit;
 }
-.fortyk .worn-item-minus{
+.fortyk .minus-button{
     background-image: url("../icons/minus.png") !important; 
     background-size: contain;
     background-repeat: no-repeat;
@@ -601,6 +601,9 @@
 }
 .fortyk .armor{
     border: 1px solid #999;
+}
+.fortyk .armor-select{
+    flex:16;
 }
 .fortyk .weapons{
     text-align: left;
