--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -83,40 +83,41 @@
         <div class="flexcol flex-group-center">
             <span class="section-title" title="This represents your wielded weapons, you can add additional wielded weapons if you have sub weapons or mechadentrites etc.">WEAPONS</span>
             <div class="flexrow">
-                <a class="worn-item-plus" title="Add extra weapon"></a>
-                <a class="worn-item-minus" title="Delete extra weapon"></a>
+                <a class="worn-item-plus plus-button" title="Add extra weapon"></a>
+                <a class="worn-item-minus minus-button" title="Delete extra weapon"></a>
             </div>
             <div class="flexrow">
                 <div class="flexcol weapon-select">
                     <span>Left Hand</span>
                     <select class="hand-weapon" data-hand="left" id="left">
 
-
-                        <option value="" {{#if (compareString data.secChar.wornGear.weapons.[0])}}selected{{/if}}>None</option>
-                        <option value="2hand" hidden {{#if (compareString data.secChar.wornGear.weapons.[0] "2hand")}}selected{{/if}}>Two handed</option>
+                        
+                        <option value="" {{#if data.secChar.wornGear.weapons.[1].data}}selected{{/if}}>None</option>
+                        
                         {{#each actor.meleeWeapons}}
-                        <option value="{{this._id}}" {{#if (compareString ../data.secChar.wornGear.weapons.[0] this._id)}}selected{{/if}}>{{this.name}}</option>
+                        <option value="{{this._id}}" {{#if (compareString ../data.secChar.wornGear.weapons.[1].data.data.isEquipped "left")}}selected{{/if}}>{{this.name}}</option>
                         {{/each}}
                         {{#each actor.rangedWeapons}}
 
-                        <option value="{{this._id}}" {{#if (compareString ../data.secChar.wornGear.weapons.[0] this._id)}}selected{{/if}}>{{this.name}}</option>
+                        <option value="{{this._id}}" {{#if (compareString ../data.secChar.wornGear.weapons.[1].data.data.isEquipped "left")}}selected{{/if}}>{{this.name}}</option>
                         {{/each}}
-
                     </select>
                 </div>
                 <div class="flexcol weapon-select">
                     <span>Right Hand</span>
                     <select class="hand-weapon" data-hand="right"  id="right">
-
-                        <option value="" {{#if (compareString data.secChar.wornGear.weapons.[1])}}selected{{/if}}>None</option>
-                        <option value="2hand" hidden {{#if (compareString data.secChar.wornGear.weapons.[1] "2hand")}}selected{{/if}}>Two handed</option>
+                        
+                        <option value="" {{#if data.secChar.wornGear.weapons.[0].data}}selected{{/if}}>None</option>
+                        
                         {{#each actor.meleeWeapons}}
-                        <option value="{{this._id}}" {{#if (compareString ../data.secChar.wornGear.weapons.[1] this._id)}}selected{{/if}}>{{this.name}}</option>
+                        <option value="{{this._id}}" {{#if (compareString ../data.secChar.wornGear.weapons.[0].data.data.isEquipped "right")}}selected{{/if}}>{{this.name}}</option>
                         {{/each}}
                         {{#each actor.rangedWeapons}}
-                        <option value="{{this._id}}" {{#if (compareString ../data.secChar.wornGear.weapons.[1] this._id)}}selected{{/if}}>{{this.name}}</option>
+
+                        <option value="{{this._id}}" {{#if (compareString ../data.secChar.wornGear.weapons.[0].data.data.isEquipped "right")}}selected{{/if}}>{{this.name}}</option>
                         {{/each}}
 
+                        
                     </select>
                 </div>
                 {{#each data.secChar.wornGear.weapons}}
@@ -141,8 +142,7 @@
 
 
             </div>
-
-            {{#each actor.wornGear.weapons}}
+            {{#each data.secChar.wornGear.weapons}}
 
             {{#if (contains this.type "ranged")}}
 
@@ -154,7 +154,7 @@
 
                 <div class="list-item">
                     <span>Attack: </span> 
-                    {{#if (greaterThan this.data.clip.value 0)}}
+                    {{#if (greaterThan this.data.data.clip.value 0)}}
                     <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{../data.characteristics.bs.total}}" data-item-id="{{this._id}}" data-label="Ranged Attack" data-char="bs">Roll</span>
                     {{else}}
                     <span class="weapon-reload button" data-weapon="{{this._id}}" >Reload</span>
@@ -162,10 +162,10 @@
                 </div>
                 <div class="list-item">
                     <span>Damage: </span> 
-                    <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}" data-weapon="{{this._id}}"> {{this.data.damageFormula.value}}</a>
+                    <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.data.damageFormula.value}}" data-weapon="{{this._id}}"> {{this.data.data.damageFormula.value}}</a>
 
                 </div>
-                {{#if this.flags.fortyk.force}}
+                {{#if this.data.flags.fortyk.force}}
                 <div class="list-item">
 
                     <a class="force-roll button" data-label="Force"> Force</a>
@@ -173,14 +173,14 @@
 
                 </div>
                 {{/if}}
-                {{#if this.flags.fortyk.maximal}}
+                {{#if this.data.flags.fortyk.maximal}}
                 <div class="list-item">
                     <span>Maximal: <input type="checkbox" class="maximal" data-item-id="{{this._id}}"  {{checked this.flags.fortyk.maximalMode}}></span>
 
 
                 </div>
                 {{/if}}
-                {{#if this.flags.fortyk.lasModal}}
+                {{#if this.data.flags.fortyk.lasModal}}
                 <div class="list-item">
                     <span>Las Fire Mode: 
                         <select class="lasMode"  data-item-id="{{this._id}}" data-dtype="Number">
@@ -198,19 +198,19 @@
                 </div>
                 {{/if}}
 
-                {{#unless (contains this.data.class.value "thrown")}}
+                {{#unless (contains this.data.data.class.value "thrown")}}
                 <div class="list-item">
 
                     <label>Remaining Ammo:</label>
-                    <select class="weapon-ammo" data-weapon="{{this._id}}" data-previous="{{this.data.ammo._id}}">
+                    <select class="weapon-ammo" data-weapon="{{this._id}}" data-previous="{{this.data.data.ammo._id}}">
 
-                        {{#select this.data.ammo._id}}
+                        {{#select this.data.data.ammo._id}}
                         <option value="">None</option>
 
                         {{#each ../actor.equippableAmmo}}
-                        {{#if (compareString this.data.class.value ../this.data.class.value)}}
-                        {{#if (compareString this.data.type.value ../this.data.type.value)}}
-                        <option value="{{this._id}}">{{this.name}}:{{this.data.amount.value}}</option>
+                        {{#if (compareString this.data.class.value ../this.data.data.class.value)}}
+                        {{#if (compareString this.data.type.value ../this.data.data.type.value)}}
+                        <option value="{{this._id}}">{{this.name}}:{{this.data.data.amount.value}}</option>
                         {{/if}}
                         {{/if}}
                         {{/each}}
@@ -220,7 +220,7 @@
                 </div>
                 {{else}}
                 <div class="list-item">
-                    <span>Amount: {{this.data.amount.value}}</span> 
+                    <span>Amount: {{this.data.data.amount.value}}</span> 
 
 
                 </div>
@@ -230,28 +230,28 @@
 
                     <input class="item-text-input" type="text" data-target="data.clip.value"  value="{{this.data.clip.value}}" data-item-id="{{this._id}}" data-dtype="Number">
                     <span> / </span>
-                    <span>{{this.data.clip.max}}</span>
+                    <span>{{this.data.data.clip.max}}</span>
 
 
                 </div>
                 <div class="list-item">
-                    <span>Range: {{this.data.range.value}}m</span>
+                    <span>Range: {{this.data.data.range.value}}m</span>
                 </div>
                 <div class="list-item">
-                    <span>Penetration: {{this.data.pen.value}}</span>
+                    <span>Penetration: {{this.data.data.pen.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <label>Rate of Fire: {{this.data.rof.[0].value}}/{{this.data.rof.[1].value}}/{{this.data.rof.[2].value}}</label>
+                    <label>Rate of Fire: {{this.data.data.rof.[0].value}}/{{this.data.data.rof.[1].value}}/{{this.data.data.rof.[2].value}}</label>
                 </div>
                 <div class="list-item">
-                    <span>Reload: {{this.data.reload.value}}</span>
+                    <span>Reload: {{this.data.data.reload.value}}</span>
 
                 </div>
                 <div class="list-item">
                     <span>Special: 
 
-                        {{#each this.flags.fortyk as |flag key|}}
+                        {{#each this.data.flags.fortyk as |flag key|}}
 
                         {{#if (checkSpecial this)}}
 
@@ -264,16 +264,16 @@
 
                 </div>
                 <div class="list-item">
-                    <span>Damage Type: {{this.data.damageType.value}}</span>
+                    <span>Damage Type: {{this.data.data.damageType.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Class: {{this.data.class.value}}</span>
+                    <span>Weapon Class: {{this.data.data.class.value}}</span>
 
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Type: {{this.data.type.value}}</span>
+                    <span>Weapon Type: {{this.data.data.type.value}}</span>
 
 
                 </div>
@@ -289,13 +289,13 @@
 
                 <div class="list-item">
                     <span>Attack: </span> 
-                    <span class="melee-attack rollable button" data-roll-type="meleeAttack" data-target="{{../data.characteristics.ws.total}}" data-item-id="{{this._id}}" data-label="Melee Attack" data-char="ws">Roll</span>
+                    <span class="melee-attack rollable button" data-roll-type="meleeAttack" data-target="{{../data.characteristics.ws.total}}" data-item-id="{{this.id}}" data-label="Melee Attack" data-char="ws">Roll</span>
                 </div>
                 <div class="list-item">
                     <span>Damage: </span>
-                    <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}" data-weapon="{{this._id}}"> {{this.data.damageFormula.value}}</a>
+                    <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.data.damageFormula.value}}" data-weapon="{{this._id}}"> {{this.data.data.damageFormula.value}}</a>
                 </div>
-                {{#if this.flags.fortyk.force}}
+                {{#if this.data.flags.fortyk.force}}
                 <div class="list-item">
 
                     <a class="force-roll button" data-label="Force"> Force</a>
@@ -304,16 +304,16 @@
                 </div>
                 {{/if}}
                 <div class="list-item">
-                    <span>Reach: {{this.data.range.value}}m</span>
+                    <span>Reach: {{this.data.data.range.value}}m</span>
                 </div>
                 <div class="list-item">
-                    <span>Penetration: {{this.data.pen.value}}</span>
+                    <span>Penetration: {{this.data.data.pen.value}}</span>
 
                 </div>
                 <div class="list-item">
                     <span>Special: 
 
-                        {{#each this.flags.fortyk as |flag key|}}
+                        {{#each this.data.flags.fortyk as |flag key|}}
 
                         {{#if (checkSpecial this)}}
 
@@ -326,16 +326,16 @@
 
                 </div>
                 <div class="list-item">
-                    <span>Damage Type: {{this.data.damageType.value}}</span>
+                    <span>Damage Type: {{this.data.data.damageType.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Class: {{this.data.class.value}}</span>
+                    <span>Weapon Class: {{this.data.data.class.value}}</span>
 
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Type: {{this.data.type.value}}</span>
+                    <span>Weapon Type: {{this.data.data.type.value}}</span>
                 </div>
 
             </div>
@@ -391,33 +391,32 @@
 
                 <span class="section-title">FORCE FIELD</span>
                 <div class="flexcol flex-group-center">
-                    <select class="force-field" name="data.secChar.wornGear.forceField._id">
-                        {{#select data.secChar.wornGear.forceField._id}}
-                        <option value="">None</option>
+                    <select class="force-field" >
+                        
+                        <option value="" {{#if data.secChar.wornGear.forceField.data}}selected{{/if}}>None</option>
                         {{#each actor.forceFields}}
-                        <option value="{{this._id}}">{{this.name}}</option>
+                        <option value="{{this._id}}" {{#if this.data.isEquipped}}selected{{/if}}>{{this.name}}</option>
                         {{/each}}
-                        {{/select}}
                     </select>
-                    {{#unless (compareString data.secChar.wornGear.forceField._id)}}
+                    {{debug this}}
+                    {{#if data.secChar.wornGear.forceField.id}}
                     <div class="forcefield flexrow flex-group-center">
                         <label>Overload: {{actor.wornGear.forceField.data.rating.overload}}</label>
                         <label>Rating: </label> 
                         <span class="forcefield rollable button" data-roll-type="forcefield" data-target="{{actor.wornGear.forceField.data.rating.value}}" data-label="{{actor.wornGear.forceField.name}}" data-char="{{actor.wornGear.forceField.data.rating.overload}}" >{{actor.wornGear.forceField.data.rating.value}}</span>
                     </div>
-                    {{/unless}}
+                    {{/if}}
                 </div>
             </div>
-            <div class="forcefield flexcol">
+            <div class="forcefield flexcol" >
                 <span class="section-title">ARMOR & ABSORBTION</span>
-                <select class="armor-select" name="data.secChar.wornGear.armor._id">
-                    {{#select data.secChar.wornGear.armor._id}}
-                    <option value="">None</option>
+                <select class="armor-select" >
+                    
+                    <option value="" {{#if data.secChar.wornGear.armor.data}}selected{{/if}}>None</option>
                     {{#each actor.armors}}
 
-                    <option value="{{this._id}}">{{this.name}}</option>
+                    <option value="{{this._id}}" {{#if this.data.isEquipped}}selected{{/if}}>{{this.name}}</option>
                     {{/each}}
-                    {{/select}}
                 </select>
                 <div class="flexcol">
                     <span class="section-title">COVER</span>
