--- a/templates/actor/comradeOW-sheet.html
+++ b/templates/actor/comradeOW-sheet.html
@@ -2,11 +2,11 @@
 
     {{!-- Sheet Header --}}
     <header class="sheet-header flexrow">
-        <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
+        <img class="profile-img" src="{{img}}" data-edit="img" title="{{name}}" />
         <div class="descr grid grid-4col">
             <div class="descrRow flexcol">
                 <span class="descrSpan">Name:</span>
-                <input name="name" type="text" value="{{actor.name}}" placeholder="Name"/>
+                <input name="name" type="text" value="{{name}}" placeholder="Name"/>
             </div>
 
             <div class="descrRow flexcol">
